[package]
authors = ["L. F. <l.f.stack.exchange@gmail.com>"]
categories = ["games"]
description = "A simple battle game"
edition = "2018"
keywords = ["game", "lockwars"]
license = "MIT"
name = "lockwars"
readme = "README.md"
repository = "https://github.com/L-F-Stack-Exchange/lockwars"
version = "0.1.0"

[dependencies]
piston = "0.50.0"
pistoncore-glutin_window = "0.64.0"
anyhow = "1.0.31"
piston2d-graphics = "0.36.0"
piston2d-opengl_graphics = "0.72.0"
ndarray = "0.13.1"
itertools = "0.9.0"
